# Motion_Detector_OpenCV

./: CMakeLists.txt  README.md  header.h  main.cpp  test_retina.cpp  testing.cpp
